--- a/tween_agency/index.html
+++ b/tween_agency/index.html
@@ -611,6 +611,8 @@
                     body: JSON.stringify({from: email.value, subject: subj.value, message: "message from "+name.value+" \n "+mess.value})
                 })
                 let data = await res.json();
+                alert(data.message);
+                console.log(data);
                 name.value = ""
                 email.value = ""
                 subj.value = ""
